Fix menus cut off when viewport height is small
This fix works for the top level menus, and but it's unreliable for
submenus, just as submenus opening at all is unreliable.

--- a/src/textual_paint/paint.css
+++ b/src/textual_paint/paint.css
@@ -99,9 +99,6 @@ Menu.menu_popup {
     height: auto;
     min-width: 30;
     overflow-y: auto;
-    /* calc isn't supported, and this should be determined by the y position anyways, which is set in python */
-    /* max-height: calc(100vh - 3); */
-    max-height: 90vh;
     /* width: auto doesn't account for the vertical scrollbar... */
     /* which means it would make a horizontal scrollbar or cut off a character on the right, */
     /* but I'm accounting for this with padding-right inside the menu item */
